<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Bhavyanshu Parasher
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">CheckIt Cloud CheckList</string>
    <string name="action_settings">Settings</string>
    <string name="check_list">Check List</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_speech">Speech Recognition</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint">Enter a Task</string>
    <string name="submit_button">Add Task</string>
    <string name="title_activity_login">Log In</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username:</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password_label">Password:</string>
    <string name="already_have_an_account_label">Already Have An Account? Log In!</string>
    <string name="sign_in_label">Sign In</string>
    <string name="dont_have_an_account_label">Sign Up!</string>
    <string name="alert_dialog_success">Registered!</string>
	<string name="alert_dialog_failed">Something went wrong! Try again.</string>
	<string name="action_help">Help</string>
	<string name="action_devinfo">Dev Info</string>
	<string name="devinfo">Application by Bhavyanshu (http://bhavyanshu.me | Tweet @pytacular) \n\ Under Apache License 2.0 \n\ Source at https://github.com/bhavyanshu/CheckIt_Android</string>
	<string name="dev_website">http://bhavyanshu.me</string>
	<string name="coupon_button">Free Coupons</string>
	<string name="share_app">Share App</string>
	
	<string name="category_prompt">Select Category</string>
	<string-array name="category_array">
        <item>Personal</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>
</resources>
